refactor(backend): full service layer cleanup, integration fixes, and new tooling
Routes:
- Fix auth_routes, mood_routes, dashboard_routes, memory_routes endpoint contracts
- Fix chatbot_routes, crisis_routes, admin_routes, privacy_routes integrations
- Align leaderboard, users, docs, integration routes with frontend expectations

Services:
- Clean services/__init__.py (remove deleted service imports)
- Fix subscription_service camelCase output (isPremium, isTrial, etc.)
- Fix rate_limiting to read REDIS_URL env var (memory:// fallback)
- Update ai_service, audit_service, monitoring_service, health_* services
- Add ml_sentiment_service, rewards_helper, structured_logging

Infrastructure:
- Add correlation ID middleware for request tracing
- Add settings.py (Pydantic-based config validation)
- Add mypy.ini and pyproject.toml for type checking
- Move operational scripts to Backend/scripts/
- Update main.py rate limiter initialization
- Update requirements.txt, Dockerfile.production, deploy script
- Add test files: test_cbt_api, test_consent_api, test_rewards_simple

--- a/Backend/Dockerfile.production
+++ b/Backend/Dockerfile.production
@@ -53,7 +53,7 @@ USER appuser
 
 # Health check
 HEALTHCHECK --interval=30s --timeout=10s --start-period=40s --retries=3 \
-    CMD python -c "import requests; requests.get('http://localhost:5001/api/health').raise_for_status()" || exit 1
+    CMD python -c "import requests; requests.get('http://localhost:5001/health').raise_for_status()" || exit 1
 
 # Expose port
 EXPOSE 5001
