chore: remove .vs/ IDE cache and .pkl model from tracking
- Untrack 9 Visual Studio cache files (.vs/ directory, 7+ MB)
- Untrack sentiment_model.pkl binary (310 KB)
- Add .vs/ and *.pkl to .gitignore
- Fixes GitHub language stats showing 72.9% HTML (was misclassified binary data)

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,12 @@
 # Frontend - React/TypeScript/Vite .gitignore
 # ===========================================
 
+# Visual Studio IDE cache
+.vs/
+
+# Machine learning models (binary)
+*.pkl
+
 # Logs
 logs
 *.log
