chore: professionalize repo  proprietary license, clean orphaned configs, add badges
- Replace MIT license with proprietary (all rights reserved)
- Remove COPYRIGHT (consolidated into LICENSE)
- Fix clone URL in README (your-org -> omar1u7777)
- Add shields.io tech badges to README header
- Delete orphaned configs: .babelrc.json, lighthouserc.js, monitoring_config.yml, cypress.config.ts
- Move nginx-production.conf to infra/nginx/ and update references
- Remove unused Cypress dependencies from package.json and tsconfig.node.json

--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -45,8 +45,7 @@
   /*  Inkluderade filer & mappar */
   "include": [
     "vite.config.ts",
-    "vitest.config.ts",
-    "cypress.config.ts"
+    "vitest.config.ts"
   ],
 
   /*  Exkluderade filer/mappar */
