--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "npx vite build",
     "build:analyze": "cross-env ANALYZE=true npx vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives",
     "preview": "vite preview",
     "serve": "vite preview --host 0.0.0.0 --port 3000",
     "test": "vitest",
