fix: add @vitest/coverage-v8, fix any types in client/crisis, fix security workflow permissions + upgrade CodeQL to v4

--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "@types/react": "^18.3.27",
     "@types/react-dom": "^18.3.7",
     "@vitejs/plugin-react": "^4.7.0",
+    "@vitest/coverage-v8": "^1.6.1",
     "@vitest/ui": "^1.0.4",
     "autoprefixer": "^10.4.20",
     "chrome-launcher": "^1.2.1",
