--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -38,6 +38,8 @@ jobs:
 
       - name: Unit tests
         run: npm run test -- --coverage
+        env:
+          VITE_ENCRYPTION_KEY: a1b2c3d4e5f6a1b2c3d4e5f6a1b2c3d4e5f6a1b2c3d4e5f6a1b2c3d4e5f6a1b2
 
       - name: Production build
         run: npm run build
@@ -74,5 +76,6 @@ jobs:
       - name: Upload Trivy results
         uses: github/codeql-action/upload-sarif@v4
         if: always()
+        continue-on-error: true
         with:
           sarif_file: 'trivy-frontend.sarif'
