--- a/Backend/pyproject.toml
+++ b/Backend/pyproject.toml
@@ -94,6 +94,8 @@ disallow_incomplete_defs = false
 [tool.ruff]
 line-length = 120
 target-version = "py311"
+
+[tool.ruff.lint]
 select = [
     "E",   # pycodestyle errors
     "W",   # pycodestyle warnings
@@ -105,6 +107,7 @@ select = [
 ]
 ignore = [
     "E501",  # line too long (handled by black)
+    "E402",  # module level import not at top (intentional: conditional imports after try/except)
     "B008",  # do not perform function calls in argument defaults
     "C901",  # too complex
 ]
@@ -119,9 +122,11 @@ exclude = [
     ".pytest_cache",
 ]
 
-[tool.ruff.per-file-ignores]
+[tool.ruff.lint.per-file-ignores]
 "__init__.py" = ["F401"]  # unused imports
 "tests/**" = ["B011", "F811"]  # assert in tests, redefined imports
+"src/services/ai_service.py" = ["F401"]  # conditional imports in try/except blocks
+"src/routes/metrics_routes.py" = ["F401"]  # conditional prometheus imports
 
 [tool.pytest.ini_options]
 minversion = "7.0"
