fix(ci): add Firebase env vars for backend test environment
- Add FIREBASE_WEB_API_KEY, FIREBASE_API_KEY, FIREBASE_PROJECT_ID,
  FIREBASE_STORAGE_BUCKET, and FIREBASE_CREDENTIALS to CI test step
- Set fallback defaults in conftest.py via os.environ.setdefault()
  so tests work without real Firebase credentials
- Fix: ValueError 'FIREBASE_WEB_API_KEY saknas' during pytest conftest load

--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -41,6 +41,11 @@ jobs:
           FLASK_TESTING: 'true'
           JWT_SECRET_KEY: ci-test-secret-key
           JWT_REFRESH_SECRET_KEY: ci-test-refresh-key
+          FIREBASE_WEB_API_KEY: ci-test-firebase-web-api-key
+          FIREBASE_API_KEY: ci-test-firebase-api-key
+          FIREBASE_PROJECT_ID: ci-test-project
+          FIREBASE_STORAGE_BUCKET: ci-test-project.appspot.com
+          FIREBASE_CREDENTIALS: '{"type":"service_account","project_id":"ci-test","private_key_id":"key","private_key":"-----BEGIN RSA PRIVATE KEY-----\nMIIBogIBAAJBALRiMLAHudeSA/x3hB2f+2NRkJzz0OGHQ/k+Eaz6TOFCnfVo+0a\ntest\n-----END RSA PRIVATE KEY-----\n","client_email":"ci@ci-test.iam.gserviceaccount.com","client_id":"123","auth_uri":"https://accounts.google.com/o/oauth2/auth","token_uri":"https://oauth2.googleapis.com/token"}'
         run: pytest --cov=src --cov-report=xml --cov-report=term-missing -v
 
       - name: Upload coverage
