fix(vercel): remove deprecated version and name properties from vercel.json

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,5 @@
 {
-  "version": 2,
-  "name": "lugn-trygg-web",
+  "$schema": "https://openapi.vercel.sh/vercel.json",
   "buildCommand": "npm run build",
   "installCommand": "npm install",
   "outputDirectory": "dist",
