fix(vercel): escape backslashes in regex source patterns for valid JSON

--- a/vercel.json
+++ b/vercel.json
@@ -44,7 +44,7 @@
       ]
     },
     {
-      "source": "/(sw\.js|service-worker\.js)",
+      "source": "/(sw\\.js|service-worker\\.js)",
       "headers": [
         {
           "key": "Cache-Control",
@@ -53,7 +53,7 @@
       ]
     },
     {
-      "source": "/(robots\.txt|sitemap\.xml)",
+      "source": "/(robots\\.txt|sitemap\\.xml)",
       "headers": [
         {
           "key": "Cache-Control",
