fix(ci): remove test_results.txt from tracking and add to .gitignore

--- a/Backend/.gitignore
+++ b/Backend/.gitignore
@@ -29,6 +29,11 @@ instance/
 
 # Logs
 *.log
+
+# Test result temp files
+test_results.txt
+test_run_results.txt
+final_results.txt
 logs/
 app.log
 error.log
