fix: stop .vercelignore from deleting tailwind.config.js and postcss.config.js
.vercelignore had 'postcss.config.*' and 'tailwind.config.*' entries
that deleted these files before the build ran. This caused Tailwind's
createContext to fail with 'Cannot read properties of undefined
(reading blocklist)' because the config file was missing.

Also un-ignored tsconfig*.json which Vite needs for path resolution.

--- a/.vercelignore
+++ b/.vercelignore
@@ -126,10 +126,9 @@ docker-compose*.yml
 .prettierrc
 .eslintrc*
 babel.config.*
-postcss.config.*
-tailwind.config.*
+# postcss.config.* - REMOVED: Tailwind needs this for PostCSS processing
+# tailwind.config.* - REMOVED: Tailwind needs this for content scanning and theme
 # vite.config.* - REMOVED: Vercel needs this!
-tsconfig*.json
 jest.config.*
 vitest.config.*
 playwright.config.*
