ci: fix invalid secrets context in if expressions for Codecov steps

--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -55,7 +55,7 @@ jobs:
 
       - name: Upload coverage
         uses: codecov/codecov-action@v4
-        if: ${{ always() && secrets.CODECOV_TOKEN != '' }}
+        if: always()
         continue-on-error: true
         with:
           files: ./Backend/coverage.xml
