--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -54,7 +54,7 @@ jobs:
 
       - name: Upload coverage
         uses: codecov/codecov-action@v4
-        if: ${{ always() && secrets.CODECOV_TOKEN != '' }}
+        if: always()
         continue-on-error: true
         with:
           files: ./coverage/coverage-final.json
