--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -15,6 +15,7 @@ permissions:
 jobs:
   lint-and-test:
     runs-on: ubuntu-latest
+    timeout-minutes: 20
     defaults:
       run:
         working-directory: ./Backend
@@ -51,9 +52,17 @@ jobs:
           FIREBASE_STORAGE_BUCKET: ci-test-project.appspot.com
           HIPAA_ENCRYPTION_KEY: yTOVpH-x9W3qRUbzBJ4pLBYCKMu5kkC-asbcsfuHvmo=
           FIREBASE_CREDENTIALS: '{"type":"service_account","project_id":"ci-test","private_key_id":"key","private_key":"stub-key-for-ci-testing-only","client_email":"ci@ci-test.iam.gserviceaccount.com","client_id":"123","auth_uri":"https://accounts.google.com/o/oauth2/auth","token_uri":"https://oauth2.googleapis.com/token"}'
-        run: pytest --cov=src --cov-report=xml --cov-report=term-missing -v
+        run: pytest --cov=src --cov-report=xml --cov-report=term-missing --tb=short -q
 
-      - name: Upload coverage
+      - name: Upload test results
+        uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: backend-coverage
+          path: Backend/coverage.xml
+          retention-days: 7
+
+      - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v4
         if: always()
         continue-on-error: true
@@ -65,6 +74,7 @@ jobs:
 
   security:
     runs-on: ubuntu-latest
+    timeout-minutes: 15
     permissions:
       security-events: write
       contents: read
@@ -72,16 +82,17 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Set up Python
+      - name: Set up Python 3.11
         uses: actions/setup-python@v5
         with:
           python-version: '3.11'
+          cache: 'pip'
+          cache-dependency-path: Backend/requirements.txt
 
       - name: Bandit security scan
         run: |
           pip install bandit
-          cd Backend
-          bandit -r src -ll -f json -o bandit-report.json
+          bandit -r Backend/src -ll -f json -o bandit-report.json
         continue-on-error: true
 
       - name: Upload Bandit report
@@ -89,10 +100,11 @@ jobs:
         if: always()
         with:
           name: bandit-report
-          path: Backend/bandit-report.json
+          path: bandit-report.json
+          retention-days: 30
 
       - name: Trivy filesystem scan
-        uses: aquasecurity/trivy-action@master
+        uses: aquasecurity/trivy-action@0.28.0
         with:
           scan-type: 'fs'
           scan-ref: './Backend'
@@ -101,7 +113,7 @@ jobs:
           exit-code: '0'
 
       - name: Upload Trivy results
-        uses: github/codeql-action/upload-sarif@v4
+        uses: github/codeql-action/upload-sarif@v3
         if: always()
         continue-on-error: true
         with:
