--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -41,7 +41,7 @@ jobs:
         run: npm run lint
 
       - name: Unit tests
-        run: npm run test -- --run --coverage --pool=forks --maxWorkers=1 --dangerouslyForceExit
+        run: npm run test -- --run --coverage --pool=forks --maxWorkers=1
         env:
           NODE_OPTIONS: --max-old-space-size=6144
           VITE_ENCRYPTION_KEY: a1b2c3d4e5f6a1b2c3d4e5f6a1b2c3d4e5f6a1b2c3d4e5f6a1b2c3d4e5f6a1b2
